--- a/assets/custom.css
+++ b/assets/custom.css
@@ -17,7 +17,7 @@
 /* Dropdown container full width */
 #country-dropdown {
     width: 90%;
-    font-size: 18px
+    font-size: 16px
 }
 
 .Select-control {
@@ -50,6 +50,7 @@
     align-items: center;
     width: 100% !important;
     justify-content: space-between;
+    align-items: stretch
 }
 
 .DateInput {
@@ -59,6 +60,9 @@
 }
 
 .DateRangePickerInput_arrow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0 5px;
     font-size: 18px;
 }
@@ -66,9 +70,9 @@
 /* Make inputs visually larger */
 .DateInput_input {
     width: 100% !important;
-    font-size: 12px;
-    padding: 12px;
-    height: 50px;
+    font-size: 14px;
+    padding: 8px 10px;
+    height: auto;
     box-sizing: border-box;
 }
 
@@ -76,7 +80,7 @@
 #update-button {
     font-size: 16px;
     height: 48px;
-    background-color: #007bff;
+    background-color: #465769;
     color: white;
     border: none;
     width: 100%;
@@ -85,4 +89,13 @@
 
 #update-button:hover {
     background-color: #0056b3;
+}
+
+.metric-value {
+    font-size: clamp(14px, 2vw, 14px); /* responsive scaling */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.2;
+    font-weight: bold;
 }
